Fixed the horizontal and vertical scrollbars being of inconsistent width.

--- a/src/reset.css
+++ b/src/reset.css
@@ -40,6 +40,7 @@ html {
 
 ::-webkit-scrollbar {
   width: 1rem;
+  height: 1rem;
   background: #080808;
 }
 
